--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="https://github.com/EthicSyber?tab=repositories" target="_blank">Github</a></li>
             <li><a href="#Potential-BlogSite">###</a></li>
-            <li><a href="/public/contact.html">Contact</a></li>
+            <li><a href="./public/contact.html">Contact</a></li>
         </ul>
     </nav>
 
     <div class="intro-container wrapper">
         <div class="intro-content">
             <div class="intro-col-1">
-                <img id='pro-pic' src="../assets/imgs/pro-headshot-pic.jpg" width="200px" height="200px">
+                <img id='pro-pic' src="./assets/imgs/pro-headshot-pic.jpg" width="200px" height="200px">
             </div>
             <div class="intro-col-2 wrapper2">
                 <p style="font-size: 30px;">Christopher Moore</p>
@@ -37,12 +37,12 @@
             <div class="grid-container">
                 <div>
                     <h2>Morse Code Translator</h2>
-                    <a href="https://github.com/EthicSyber/morse-code-translator" target="_blank"><img src="../assets/imgs/morse-ascii-text-art.png" alt="ascii-morse-code-art"></a>
+                    <a href="https://github.com/EthicSyber/morse-code-translator" target="_blank"><img src="./assets/imgs/morse-ascii-text-art.png" alt="ascii-morse-code-art"></a>
                 </div>
                 
                 <div>
                     <h2>TIC-TAC-TOE</h2>
-                    <a href="https://github.com/EthicSyber/tic-tac-toe-v-cli" target="_blank"><img src="../assets/imgs/ttt-ascii-text-art-2.png" alt="ascii-tic-tac-toe-art"></a>
+                    <a href="https://github.com/EthicSyber/tic-tac-toe-v-cli" target="_blank"><img src="./assets/imgs/ttt-ascii-text-art-2.png" alt="ascii-tic-tac-toe-art"></a>
                 </div>
             </div>
         </div>
