--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="footer-content">
             <div>
                 <ul>
-                    <li><a href="/public/contact.html" class="btn btn-primary btn-wrapper">Contact</a></li>
+                    <li><a href="./public/contact.html" class="btn btn-primary btn-wrapper">Contact</a></li>
                 </ul>
             </div>
         </div>
