--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     </div>
 
     <footer>
+        Copyright © Christopher Moore
         <div class="footer-content">
             <div>
                 <ul>
