--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                     <h2>TIC-TAC-TOE</h2>
                     <a href="https://github.com/EthicSyber/tic-tac-toe-v-cli" target="_blank"><img src="./assets/imgs/ttt-ascii-text-art-2.png" alt="ascii-tic-tac-toe-art"></a>
                 </div>
+                <div>
+                    <h2>Blackjack-CLI</h2>
+                    <a href="https://github.com/EthicSyber/blackjack-cli" target="_blank"><img src="./assets/imgs/blackjack_asciiart_2.png" alt="ascii-blackjack-art"></a>
+                </div>
             </div>
         </div>
     </div>
