--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                     <h2>Blackjack-CLI</h2>
                     <a href="https://github.com/EthicSyber/blackjack-cli" target="_blank"><img src="./assets/imgs/blackjack_asciiart_2.png" alt="ascii-blackjack-art"></a>
                 </div>
+                <div>
+                    <h2>Watermark App</h2>
+                    <a href="https://github.com/EthicSyber/img-watermark-app" target="_blank"><img src="./assets/imgs/watermark_app_ascii.png" alt="ascii-watermark-art"></a>
+                </div>
             </div>
         </div>
     </div>
